--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Clean-Scripts/EasyGo-Expense-Tracker/refs/heads/main/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
     <title>Easy Go Admin | Enterprise Command</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
@@ -25,14 +24,9 @@
                 <h1 class="text-3xl font-black uppercase text-gray-900 tracking-tighter">Enterprise Command</h1>
             </div>
             <div class="flex flex-wrap gap-3 mt-6 md:mt-0">
-                <button onclick="pushToGithub()" class="bg-green-600 text-white px-6 py-3 rounded-xl font-bold uppercase text-[10px] shadow-lg animate-pulse">Save & Update Public Menu</button>
-                <button onclick="addNewProduct()" class="bg-gray-800 text-white px-6 py-3 rounded-xl font-bold uppercase text-[10px]">+ Add More Item</button>
+                <button onclick="addNewProduct()" class="bg-gray-800 text-white px-6 py-3 rounded-xl font-bold uppercase text-[10px] shadow-lg hover:bg-gray-700 transition-all">+ Add More Item</button>
+                <button onclick="window.print()" class="bg-indigo-600 text-white px-6 py-3 rounded-xl font-bold uppercase text-[10px] shadow-lg hover:bg-indigo-500 transition-all">Print Report</button>
             </div>
-        </div>
-
-        <div class="bg-blue-50 p-6 rounded-[2rem] border border-blue-100 mb-8 flex flex-col md:flex-row gap-4 items-center">
-            <p class="text-[10px] font-black text-blue-400 uppercase w-32">Target Repo:</p>
-            <input type="text" id="ghRepo" value="Clean-Scripts/Easygo-Menu" class="flex-grow p-3 rounded-xl border border-blue-200 text-xs font-bold bg-white/50">
         </div>
 
         <div class="bg-white rounded-3xl border border-gray-100 shadow-xl overflow-hidden mb-12">
@@ -78,6 +72,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="bg-white p-10 rounded-[2.5rem] border border-gray-200 flex flex-col justify-center items-center">
                 <p class="text-[10px] font-black text-gray-400 uppercase mb-4">Manual Sales Tracker</p>
                 <div id="salesInputs" class="grid grid-cols-2 gap-4 w-full"></div>
@@ -86,9 +81,6 @@
     </div>
 
     <script>
-        // REPLACE WITH NEW TOKEN AFTER DELETING OLD ONE
-        const GH_TOKEN = "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"; 
-
         let products = [
             { sort: 1, name: "Steamed Veg Momos", raw: 2.82, std: 70, grams: 0, limit: 5, pcsKg: 39, sold: 0, special: false },
             { sort: 2, name: "Fried Veg Momos", raw: 2.82, std: 80, grams: 0, limit: 5, pcsKg: 39, sold: 0, special: true },
@@ -99,7 +91,7 @@
         ];
 
         function calculateMargin(p) {
-            const cost = (p.raw * 8) + 6.39;
+            const cost = (p.raw * 8) + 6.39; // Overhead per plate
             return ((p.std - cost) / p.std) * 100;
         }
 
@@ -116,14 +108,14 @@
 
                 return `<tr class="${statusClass}">
                     <td class="p-5">#${i+1}</td>
-                    <td><input type="text" onchange="updateVal(${origIdx},'name',this.value)" value="${p.name}" class="bg-transparent border-b uppercase"></td>
+                    <td><input type="text" onchange="updateVal(${origIdx},'name',this.value)" value="${p.name}" class="bg-transparent border-b uppercase font-bold w-full"></td>
                     <td class="text-blue-600 font-black">${p.name === 'French Fries' ? adminPieces + ' Pcs' : '8 Pcs'}</td>
                     <td><input type="number" onchange="updateVal(${origIdx},'grams',this.value)" value="${p.grams}" class="w-12 bg-transparent border-b ${p.name !== 'French Fries' ? 'opacity-20' : ''}">g</td>
                     <td>₹<input type="number" step="0.01" onchange="updateVal(${origIdx},'raw',this.value)" value="${p.raw}" class="w-10 bg-transparent border-b"></td>
                     <td>₹<input type="number" onchange="updateVal(${origIdx},'std',this.value)" value="${p.std}" class="w-12 bg-transparent border-b"></td>
                     <td><input type="number" onchange="updateVal(${origIdx},'limit',this.value)" value="${p.limit}" class="w-8 bg-transparent border-b">kg</td>
-                    <td class="text-green-600">${calculateMargin(p).toFixed(0)}%</td>
-                    <td class="text-center"><button onclick="deleteItem(${origIdx})" class="text-red-400 hover:text-red-600">Delete</button></td>
+                    <td class="text-green-600 font-black">${calculateMargin(p).toFixed(0)}%</td>
+                    <td class="text-center"><button onclick="deleteItem(${origIdx})" class="text-red-400 hover:text-red-600 font-bold">Delete</button></td>
                 </tr>`;
             }).join('');
             calculateEbitda();
@@ -132,9 +124,9 @@
         function renderSales() {
             const container = document.getElementById('salesInputs');
             container.innerHTML = products.map((p, i) => `
-                <div class="flex flex-col gap-1 p-3 bg-gray-50 rounded-2xl">
+                <div class="flex flex-col gap-1 p-3 bg-gray-50 rounded-2xl border border-gray-100">
                     <label class="text-[8px] font-bold text-gray-400 uppercase">${p.name}</label>
-                    <input type="number" onchange="updateVal(${i},'sold',this.value)" value="${p.sold}" class="p-2 border rounded-xl font-black text-indigo-600">
+                    <input type="number" onchange="updateVal(${i},'sold',this.value)" value="${p.sold}" class="p-2 border rounded-xl font-black text-indigo-600 focus:ring-2 focus:ring-indigo-400 outline-none">
                 </div>
             `).join('');
         }
@@ -154,34 +146,7 @@
             renderMgmt(); renderSales();
         }
 
-        function deleteItem(i) { if(confirm("Delete item?")) { products.splice(i,1); renderMgmt(); renderSales(); } }
-
-        async function pushToGithub() {
-            const repo = document.getElementById('ghRepo').value;
-            if(!GH_TOKEN || GH_TOKEN === "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") return alert("Please set your NEW GH_TOKEN first!");
-
-            try {
-                // Fetch the current SHA to update
-                const getRes = await fetch(`https://api.github.com/repos/${repo}/contents/menu.json`, { 
-                    headers: { 'Authorization': `token ${GH_TOKEN}` } 
-                });
-                const file = await getRes.json();
-                
-                // Push all product data to the public repo
-                const putRes = await fetch(`https://api.github.com/repos/${repo}/contents/menu.json`, {
-                    method: 'PUT',
-                    headers: { 'Authorization': `token ${GH_TOKEN}`, 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ 
-                        message: "Admin: Enterprise Update", 
-                        content: btoa(JSON.stringify(products, null, 2)), 
-                        sha: file.sha 
-                    })
-                });
-
-                if(putRes.ok) alert("SUCCESS! Public menu updated. Check the customer link.");
-                else alert("FAILED: Verify token permissions or repo name.");
-            } catch (e) { alert("Network Error. Ensure 'menu.json' exists in the public repo."); }
-        }
+        function deleteItem(i) { if(confirm("Delete this item permanently?")) { products.splice(i,1); renderMgmt(); renderSales(); } }
 
         window.onload = () => { renderMgmt(); renderSales(); };
     </script>
